--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 html, body {
-    margin: 10;
-    padding: 10;
+    margin: 10px;
+    padding: 10px;
     font-family: 'Dancing Script', cursive, sans-serif;
 }
 
@@ -26,6 +26,10 @@ html, body {
     
 }
 
+.apple:before{
+    content: '🥑';
+}
+
 #score_h2 {
     font-weight: 100;
     font-size: 22px;
@@ -47,3 +51,32 @@ html, body {
 #start:focus, #start:active{
     outline: none;
 }
+
+.container{
+    position: relative;
+}
+
+.game-over{
+    display:none;
+}
+
+.game-over-display{
+    position: absolute;
+    top: 50%;
+    display: block;
+    animation: gameOver 2s;
+    color: darkred;
+    font-size: 80px;
+}
+
+@keyframes gameOver {
+   0% {
+       font-size: 10px;
+       opacity: 1%
+   }
+   100% {
+       font-size: 80px;
+       opacity: 100%
+   }
+}
+
